--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,22 @@
 # Archivo de configuración para Nixpacks
 
 [phases.setup]
-# Lista de paquetes a instalar usando el manejador de paquetes apt
-aptPkgs = ["google-chrome-stable", "chromedriver"]
+# Instala paquetes básicos necesarios para añadir el repositorio de Chrome
+aptPkgs = ["wget", "gnupg"]
+cmds = [
+    # 1. Añade la llave de seguridad de Google
+    "wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/google-chrome-keyring.gpg",
+    
+    # 2. Añade el repositorio de Chrome a las fuentes del sistema
+    "echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/google-chrome-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main' > /etc/apt/sources.list.d/google-chrome.list",
+    
+    # 3. Actualiza la lista de paquetes ahora que se añadió la nueva fuente
+    "apt-get update",
+    
+    # 4. Instala Google Chrome (ahora sí lo encontrará)
+    "apt-get install -y google-chrome-stable"
+]
 
 [start]
-# Comando para iniciar tu aplicación
+# El comando para iniciar tu aplicación
 cmd = "python screenshot_script.py"
